--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "pretest": "npm run lint",
     "test": "jest",
     "code:coverage": "jest --coverage",
-    "clean": "rm -rf istats.widget.zip coverage dist",
+    "clean": "rm -rf istats.widget.zip coverage dist reports",
     "prebuild": "npm run clean && npm run test",
     "build": "mkdir -p dist && rsync -R index.jsx src/**/* dist --exclude **/__test__/**",
     "prezip": "npm run build",
@@ -39,6 +39,11 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-sonarjs": "^0.3.0",
     "jest": "^24.3.1",
+    "jest-junit": "^6.3.0",
     "react": "^16.5.2"
+  },
+  "jest-junit": {
+    "outputDirectory": "./reports/junit",
+    "outputName": "./test-results.xml"
   }
 }
