--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,18 +31,6 @@ jobs:
           name: npm-install
           command: npm install
 
-      # Run tests
-      - run:
-          name: test
-          command: ./node_modules/.bin/jest --ci --runInBand --reporters=default --reporters=jest-junit
-          environment:
-            JEST_JUNIT_OUTPUT: "reports/junit/test-results.xml"
-
-      # Run code coverage report
-      - run:
-          name: code-coverage
-          command: ./node_modules/.bin/jest --collectCoverage=true
-
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -55,9 +43,22 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # Store artifacts and test results
-      - store_artifacts:
-          path: reports
+      # Run tests
+      - run:
+          name: test
+          command: ./node_modules/.bin/jest --ci --runInBand --reporters=default --reporters=jest-junit
+          environment:
+            JEST_JUNIT_OUTPUT: "reports/junit/test-results.xml"
 
+      # Store test results
       - store_test_results:
           path: reports/junit
+
+      # Run code coverage report
+      - run:
+          name: code-coverage
+          command: ./node_modules/.bin/jest --collectCoverage=true
+
+      # Store artifacts
+      - store_artifacts:
+          path: reports
