--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@
 #
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
-version: 2
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.4
 jobs:
   build:
     docker:
@@ -15,12 +17,6 @@ jobs:
       # - image: circleci/mongo:3.4.4
 
     working_directory: ~/repo
-
-    jobs:
-      build:
-        branches:
-          ignore:
-            develop
 
     steps:
       # Checkout repository to working directory
@@ -62,3 +58,7 @@ jobs:
       # Store artifacts
       - store_artifacts:
           path: reports
+
+      # Upload coverage report to coverage.io
+      - codecov/upload:
+          file: 'reports/coverage/*.json'
