--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,6 @@ jobs:
       - store_artifacts:
           path: reports
 
-      # Upload coverage report to coverage.io
+      # Upload coverage report to codecov.io
       - codecov/upload:
           file: 'reports/coverage/*.json'
