--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "code:coverage": "jest --coverage",
     "clean": "rm -rf istats.widget.zip dist reports",
     "prebuild": "npm run clean && npm run test",
-    "build": "mkdir -p dist && rsync -R index.jsx index.css icons.ttf src/**/* dist --exclude **/__test__/**",
+    "build": "mkdir -p dist && rsync -R index.jsx index.css icons.ttf src/**/* istats.widget --exclude **/__test__/**",
     "prezip": "npm run build",
-    "zip": "zip -r istats.widget.zip dist -i@include.lst -x@exclude.lst -X"
+    "zip": "zip -r istats.widget.zip istats.widget -i@include.lst -x@exclude.lst -X"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
