--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "pretest": "npm run lint",
     "test": "jest",
     "code:coverage": "jest --coverage",
-    "clean": "rm -rf istats.widget.zip istats.widget reports",
+    "clean": "rm -rf dist reports",
     "prebuild": "npm run clean && npm run test",
-    "build": "mkdir -p istats.widget && rsync -R index.jsx index.css icons.ttf src/**/* istats.widget --exclude **/__test__/**",
+    "build": "mkdir -p dist/istats.widget && rsync -R index.jsx index.css icons.ttf src/**/* dist/istats.widget --exclude **/__test__/**",
     "prezip": "npm run build",
-    "zip": "zip -r istats.widget.zip istats.widget -i@include.lst -x@exclude.lst -X"
+    "zip": "cd dist && zip -r istats.widget.zip istats.widget -i@../include.lst -x@../exclude.lst -X"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
