--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
     "build": "mkdir -p dist/istats.widget && rsync -R index.jsx index.css icons.ttf src/**/* dist/istats.widget --exclude **/__test__/**",
     "prezip": "npm run build",
     "zip": "cd dist && zip -r istats.widget.zip istats.widget -i@../include.lst -x@../exclude.lst -X && mv istats.widget.zip ..",
-    "preversion": "",
-    "version": "",
-    "postversion": ""
+    "version": "npm run zip && git add --all",
+    "postversion": "git push && git push --tags && npm run clean"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
