--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "postversion": "git push && git push --tags && npm run clean"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.7.0",
+    "babel-eslint": "^10.0.2",
+    "@babel/preset-env": "^7.5.4",
     "babel-preset-react": "^6.24.1",
     "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-sonarjs": "^0.3.0",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
     "jest-junit": "^6.4.0",
     "react": "^16.8.6"
   },
