--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,6 @@ sonar.sources=.
  
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
+
+# LCOV report files paths
+sonar.javascript.lcov.reportPaths=./reports/coverage/lcov-report
