--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,13 @@
 {
   "parser": "babel-eslint",
-  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:sonarjs/recommended"],
-  "plugins": ["sonarjs"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:sonarjs/recommended"
+  ],
+  "plugins": [
+    "sonarjs"
+  ],
   "env": {
     "browser": true,
     "jest": true,
