Exclude __mocks__ from ./dist

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "code:coverage": "jest --coverage",
     "clean": "rm -rf dist reports",
     "prebuild": "npm run clean && npm run test",
-    "build": "mkdir -p dist/istats.widget && rsync -R index.jsx index.css icons.ttf src/**/* dist/istats.widget --exclude **/__test__/**",
+    "build": "mkdir -p dist/istats.widget && rsync -r -R index.jsx index.css icons.ttf src/ dist/istats.widget --exclude={'__mocks__','__tests__'}",
     "prezip": "npm run build",
     "zip": "cd dist && zip -r istats.widget.zip istats.widget -i@../include.lst -x@../exclude.lst -X && mv istats.widget.zip ..",
     "version": "npm run zip && git add --all",
