CircleCI - Switch to Docker authenticated pulls

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,9 @@ jobs:
     docker:
       # Specify the version you desire here
       - image: circleci/node:lts
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
+        auth:
+          username: $DOCKERHUB_USER
+          password: $DOCKERHUB_PASSWORD
 
     working_directory: ~/repo
 
@@ -68,6 +66,8 @@ workflows:
   commit:
     jobs:
       - build
+        context:
+          - DockerHub
   nightly:
     triggers:
       - schedule:
@@ -78,3 +78,5 @@ workflows:
                 - master
     jobs:
       - build
+        context:
+          - DockerHub
