Remove .sonarcloud.properties file. Exclude __mocks__ from coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,11 +20,12 @@ sonar.exclusions=dist/*,node_modules/*,reports/*,sandbox/*
 
 sonar.tests=src
 sonar.test.inclusions=**/src/**/*.test.js
-sonar.coverage.exclusions=src/babel.config.js,src/jest.config.js
+sonar.coverage.exclusions=src/*.config.js,**/__mocks__/**
 
 sonar.javascript.jstest.reportsPath=reports/junit/test-results.xml
 sonar.javascript.lcov.reportPaths=reports/coverage/lcov.info
 
+sonar.cpd.exclusions=**/*.test.js,**/__mocks__/**
 
 # =====================================================
 #   Meta-data for the project
