--- a/package.json
+++ b/package.json
@@ -34,19 +34,19 @@
     "postversion": "git push && git push --tags && npm run clean"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.18.0",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-sonarjs": "^0.5.0",
-    "jest": "^26.6.3",
-    "jest-junit": "^12.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@babel/eslint-parser": "^7.15.4",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "babel-jest": "^27.2.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.25.2",
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "jest": "^27.2.0",
+    "jest-junit": "^12.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "jest-junit": {
     "outputDirectory": "./reports/junit",
