--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-        node-version: [14.x, 16.x]
+        node-version: [16.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -43,3 +43,64 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+    - name: Prepare GitHub event
+      run: |
+        echo "Event Name: ${{ github.event_name }}"
+        echo "GITHUB_SHA_SHORT=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+
+    - name: Send Slack Notification
+      if: always()
+      id: slack
+      uses: slackapi/slack-github-action@v1.16.0
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+      with:
+        payload: |
+          {
+            "blocks": [
+              {
+                "type": "header",
+                "text": {
+                  "type": "plain_text",
+                  "text": "${{ fromJSON('[":rotating_light: Workflow failed", ":tada: Workflow was successful"]')[job.status == 'success'] }}",
+                  "emoji": true
+                }
+              },
+              {
+                "type": "section",
+                "fields": [
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Workflow*:\n${{ github.workflow }}"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Ref Name*:\n<${{ format('{0}/tree/{1}', github.event.repository.url, github.ref_name) }}|${{ github.ref_name }}>"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Actor*:\n${{ github.event.sender.login }}"
+                  },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*SHA*:\n<${{ format('{0}/commits/{1}', github.event.repository.url, github.sha) }}|${{ env.GITHUB_SHA_SHORT }}>"
+                  }
+                ]
+              },
+              {
+                "type": "actions",
+                "elements": [
+                  {
+                    "type": "button",
+                    "text": {
+                      "type": "plain_text",
+                      "text": "View Job"
+                    },
+                    "url": "${{ format('{0}/actions/runs/{1}', github.event.repository.url, github.run_id) }}"
+                  }
+                ]
+              }
+            ]
+          }
