--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,9 +44,12 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-    - name: Prepare GitHub event
+    - name: Prepare Github event
       run: |
         echo "Event Name: ${{ github.event_name }}"
+        echo "Event:\n${{ github.event }}"
+
+        echo "GITHUB_REPO_URL=`echo $GITHUB_SERVER_URL/$GITHUB_REPOSITORY`" >> $GITHUB_ENV
         echo "GITHUB_SHA_SHORT=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
 
     - name: Send Slack Notification
@@ -77,15 +80,15 @@ jobs:
                   },
                   {
                     "type": "mrkdwn",
-                    "text": "*Ref Name*:\n<${{ format('{0}/tree/{1}', github.event.repository.url, github.ref_name) }}|${{ github.ref_name }}>"
+                    "text": "*Ref Name*:\n<${{ format('{0}/tree/{1}', env.GITHUB_REPO_URL, github.ref_name) }}|${{ github.ref_name }}>"
                   },
                   {
                     "type": "mrkdwn",
-                    "text": "*Actor*:\n${{ github.event.sender.login }}"
+                    "text": "*Actor*:\n${{ github.actor.login }}"
                   },
                   {
                     "type": "mrkdwn",
-                    "text": "*SHA*:\n<${{ format('{0}/commits/{1}', github.event.repository.url, github.sha) }}|${{ env.GITHUB_SHA_SHORT }}>"
+                    "text": "*SHA*:\n<${{ format('{0}/commits/{1}', env.GITHUB_REPO_URL, github.sha) }}|${{ env.GITHUB_SHA_SHORT }}>"
                   }
                 ]
               },
@@ -98,7 +101,7 @@ jobs:
                       "type": "plain_text",
                       "text": "View Job"
                     },
-                    "url": "${{ format('{0}/actions/runs/{1}', github.event.repository.url, github.run_id) }}"
+                    "url": "${{ format('{0}/actions/runs/{1}', env.GITHUB_REPO_URL, github.run_id) }}"
                   }
                 ]
               }
