--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Prepare Github event
       run: |
         echo "Event Name: ${{ github.event_name }}"
-        echo "Event:\n${{ github.event }}"
+        echo "Event:\n${{ toJSON(github.event) }}"
 
         echo "GITHUB_REPO_URL=`echo $GITHUB_SERVER_URL/$GITHUB_REPOSITORY`" >> $GITHUB_ENV
         echo "GITHUB_SHA_SHORT=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
