--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,66 +44,66 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-    - name: Prepare Github event
-      run: |
-        echo "Event Name: ${{ github.event_name }}"
-        echo "Event:\n${{ toJSON(github.event) }}"
+    # - name: Prepare Github event
+    #   run: |
+    #     echo "Event Name: ${{ github.event_name }}"
+    #     echo "Event:\n${{ toJSON(github.event) }}"
 
-        echo "GITHUB_REPO_URL=`echo $GITHUB_SERVER_URL/$GITHUB_REPOSITORY`" >> $GITHUB_ENV
-        echo "GITHUB_SHA_SHORT=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+    #     echo "GITHUB_REPO_URL=`echo $GITHUB_SERVER_URL/$GITHUB_REPOSITORY`" >> $GITHUB_ENV
+    #     echo "GITHUB_SHA_SHORT=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
 
-    - name: Send Slack Notification
-      if: always()
-      id: slack
-      uses: slackapi/slack-github-action@v1.16.0
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
-      with:
-        payload: |
-          {
-            "blocks": [
-              {
-                "type": "header",
-                "text": {
-                  "type": "plain_text",
-                  "text": "${{ fromJSON('[":rotating_light: Workflow failed", ":tada: Workflow was successful"]')[job.status == 'success'] }}",
-                  "emoji": true
-                }
-              },
-              {
-                "type": "section",
-                "fields": [
-                  {
-                    "type": "mrkdwn",
-                    "text": "*Workflow*:\n${{ github.workflow }}"
-                  },
-                  {
-                    "type": "mrkdwn",
-                    "text": "*Ref Name*:\n<${{ format('{0}/tree/{1}', env.GITHUB_REPO_URL, github.ref_name) }}|${{ github.ref_name }}>"
-                  },
-                  {
-                    "type": "mrkdwn",
-                    "text": "*Actor*:\n${{ github.actor.login }}"
-                  },
-                  {
-                    "type": "mrkdwn",
-                    "text": "*SHA*:\n<${{ format('{0}/commits/{1}', env.GITHUB_REPO_URL, github.sha) }}|${{ env.GITHUB_SHA_SHORT }}>"
-                  }
-                ]
-              },
-              {
-                "type": "actions",
-                "elements": [
-                  {
-                    "type": "button",
-                    "text": {
-                      "type": "plain_text",
-                      "text": "View Job"
-                    },
-                    "url": "${{ format('{0}/actions/runs/{1}', env.GITHUB_REPO_URL, github.run_id) }}"
-                  }
-                ]
-              }
-            ]
-          }
+    # - name: Send Slack Notification
+    #   if: always()
+    #   id: slack
+    #   uses: slackapi/slack-github-action@v1.16.0
+    #   env:
+    #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+    #     SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+    #   with:
+    #     payload: |
+    #       {
+    #         "blocks": [
+    #           {
+    #             "type": "header",
+    #             "text": {
+    #               "type": "plain_text",
+    #               "text": "${{ fromJSON('[":rotating_light: Workflow failed", ":tada: Workflow was successful"]')[job.status == 'success'] }}",
+    #               "emoji": true
+    #             }
+    #           },
+    #           {
+    #             "type": "section",
+    #             "fields": [
+    #               {
+    #                 "type": "mrkdwn",
+    #                 "text": "*Workflow*:\n${{ github.workflow }}"
+    #               },
+    #               {
+    #                 "type": "mrkdwn",
+    #                 "text": "*Ref Name*:\n<${{ format('{0}/tree/{1}', env.GITHUB_REPO_URL, github.ref_name) }}|${{ github.ref_name }}>"
+    #               },
+    #               {
+    #                 "type": "mrkdwn",
+    #                 "text": "*Actor*:\n${{ github.actor.login }}"
+    #               },
+    #               {
+    #                 "type": "mrkdwn",
+    #                 "text": "*SHA*:\n<${{ format('{0}/commits/{1}', env.GITHUB_REPO_URL, github.sha) }}|${{ env.GITHUB_SHA_SHORT }}>"
+    #               }
+    #             ]
+    #           },
+    #           {
+    #             "type": "actions",
+    #             "elements": [
+    #               {
+    #                 "type": "button",
+    #                 "text": {
+    #                   "type": "plain_text",
+    #                   "text": "View Job"
+    #                 },
+    #                 "url": "${{ format('{0}/actions/runs/{1}', env.GITHUB_REPO_URL, github.run_id) }}"
+    #               }
+    #             ]
+    #           }
+    #         ]
+    #       }
