--- a/package.json
+++ b/package.json
@@ -34,19 +34,20 @@
     "postversion": "git push && git push --tags && npm run clean"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.4",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.0",
-    "babel-jest": "^27.2.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.25.2",
-    "eslint-plugin-sonarjs": "^0.10.0",
-    "jest": "^27.2.0",
-    "jest-junit": "^12.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "babel-jest": "^28.1.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-sonarjs": "^0.13.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "jest-junit": "^13.2.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "jest-junit": {
     "outputDirectory": "./reports/junit",
